fix: Text not align center

--- a/src/pages/IndexPage/QRCode/Stage/DetailQRCode/index.module.scss
+++ b/src/pages/IndexPage/QRCode/Stage/DetailQRCode/index.module.scss
@@ -22,12 +22,13 @@
   }
 
   .text_tip {
+    width: 100vw;
+    text-align: center;
     position: absolute;
+    left: 0;
     bottom: 0;
-    left: 50%;
     font-size: .6rem;
     font-weight: 700;
-    transform: translateX(-50%);
   }
 
 
